2012-12-08  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c, xlib/x_imagelib.c:
	  kik_dl_open("libm.so") is tried not only with LIBMDIR but also without it.

	* fb/x_window.c:
	  Segfault in starting mlterm with --pic option in framebuffer is fixed.

	* doc/en/README.win32, doc/ja/README.win32: Updated.

	* win32/x_imagelib.c, mlimgloader/main.c, mlimgloader/Makefile.in,
	  c_imagelib.c, configure.in:
	  - mlimgloader is possible to be built in win32.
	  - Not only BMP format but also other image formats are supported in win32
	    by mlimgloader.
	  - "contrast", "gamma" and "brightness" options are supported in win32.

2012-12-07  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: The pty size of ml_term_t is fit to the screen size
	  when it is attached to x_screen_t in framebuffer.

2012-12-05  Araki Ken  <arakiken@users.sf.net>

	* libtype/x_font_ft.c: Font names like "Courier 10 Pitch" which
	  was wrongly regarded as 10-point size "Courier" font is parsed
	  correctly.

2012-12-04  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c:
	  - The bug of "button3_behavior" option rejecting "mlclient ..."
	    command is fixed.
	  - "mlclient ..." with "-e" and "--initstr" option can be specified
	    in ~/.mlterm/key.

2012-12-01  Araki Ken  <arakiken@users.sf.net>

	* 3.1.6 released.
	  (tag "rel-3_1_6")

	* configure.in, mlterm.spec, main/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.6.

	* ml_vt100_parser.c, ml_edit.[ch], ml_screen.h:
	  DECCRA(CSI...$v) and DECERA(CSI...$z) are supported.

2012-11-30  Araki Ken  <arakiken@users.sf.net>

	* x_sb_view_factory.c: Memory leak is fixed.

	* ml_term.[ch], ml_vt100_parser.[ch], x_draw_str.c, x_picture.[ch], x_screen.[ch]:
	  Sixel graphic pictures are divided to the screen cells.

	* MLTerm.java: F1-F20 key sequences are output.

2012-11-25  Araki Ken  <arakiken@users.sf.net>

	* sylalble.lex, lex.split.c: bzero() -> memset()

	* doc/en/README.fb, doc/ja/README.fb, gtk/INSTALL: