@@ -1,3 +1,9 @@
+2012-12-09  Araki Ken  <arakiken@users.sf.net>
+
+	* mlimgloader/main.c: setmode(STDOUT_FILENO, O_BINARY) in win32.
+
+	* win32/x_imagelib.c: Minor fixes.
+
 2012-12-08  Araki Ken  <arakiken@users.sf.net>
 
 	* fb/x_imagelib.c, xlib/x_imagelib.c:
